fixed mobile alignment and spacing on checkout page

--- a/checkout.css
+++ b/checkout.css
@@ -20,7 +20,7 @@ nav {
 
 @media only screen and (max-width: 780px) {
     nav {
-        margin-bottom: 3rem;
+        margin: 1.5rem 0 2.75rem 0;
     }
 }
 
@@ -175,7 +175,7 @@ header > p {
 .total-amount-wrapper {
     display: flex;
     flex-direction: column;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .amount-in-usd {
